# garden-tasks-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: bootstrap_secrets.sh
src/garden_app/: domain_types.py  logging_config.py  main.py
src/garden_app/config/: env.py
src/garden_app/domain/: task_sorting.py  task_visibility.py  time.py  types.py
src/garden_app/integrations/: google_sheets.py
src/garden_app/models/: root_response.py  task.py  task_response.py
src/garden_app/services/: task_loader.py  task_parser.py  task_service.py
tests/services/: test_task_parser.py
